--- a/style.css
+++ b/style.css
@@ -194,6 +194,15 @@ nav a.active {
 
 @media only screen and (max-width: 1050px) {
 
+    #top-bg-header {
+        font-size: 100px;
+    }
+
+    #top-bg-article {
+        padding-left: 20px;
+        padding-right: 20px;
+        font-size: 20px;
+    }
     #dropdown-button {
         display: inline-block;
         border: none;
@@ -221,6 +230,21 @@ nav a.active {
 
     .navbar {
         display: none;
+    }
+
+    #social-links {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    #social-links img {
+        width: 100px;
+    }
+
+    #main-sections {
+        padding: 10px;
     }
     
 }
