--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ nav a.active {
 }
 
 #top-bg-header {
-    text-shadow: 2px 2px black;
+    text-shadow: 6px 6px 2px black;
     font-size: 120px;
     position: relative;
 }
@@ -100,8 +100,8 @@ nav a.active {
 
 /* remaining section styles */
 #main-sections {
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 7%;
+    padding-right: 7%;
     margin-top: 0px;
     border-bottom: 3px solid #5865F2;
     background: linear-gradient(217deg, rgba(66,69,73, 0.9), rgba(255,0,0,0) 80%),
@@ -116,12 +116,19 @@ nav a.active {
 }
 
 .discord-header-text {
+    font-size: xx-large !important;
     text-align: center;
 }
 
 #discord-section {
     display: flex;
     flex-direction: column;
+}
+
+#discord-section a {
+    font-family: Oxygen-Regular;
+    color: white;
+
 }
 
 #discord-section > div {
@@ -148,7 +155,18 @@ nav a.active {
 }
 
 #discord-section p {
+    font-size: x-large;
     text-align: center;
+}
+
+.discord-description-left {
+    padding-left: 2.5%;
+    padding-right: 45%;
+}
+
+.discord-description-right {
+    padding-right: 2.5%;
+    padding-left: 45%;
 }
 
 #discord-feature-1 img {
@@ -193,6 +211,15 @@ nav a.active {
     outline: none;
 }
 
+#contact-button {
+    transition: all 0.3s;
+}
+
+#contact-button:hover {
+    filter: brightness(110%);
+    box-shadow: 0px 0px 20px 0 rgba(1, 146, 243, 0.75);
+}
+
 
 /* links section styles */
 
@@ -225,12 +252,12 @@ nav a.active {
     font-family: Oxygen-Regular;
 }
 
-#deatg {
+.coolguy {
     color: white;
     text-decoration: none;
     transition: all 0.8s;
 }
-#deatg:hover {
+.coolguy:hover {
     color: rgb(0, 158, 231);
     filter:saturate(1000%);
     animation: glow 1s ease-in-out infinite alternate;
@@ -263,9 +290,106 @@ nav a.active {
 }
 
 
-
+/* mobile styles */
 
 @media only screen and (max-width: 1050px) {
+
+    #discord-section img {
+        width: 50%;
+    }
+
+    .discord-description-left {
+        padding-left: 0.5%;
+        padding-right: 52.5%;
+    }
+    
+    .discord-description-right {
+        padding-right: 0.5%;
+        padding-left: 52.5%;
+    }
+
+    #top-bg-header {
+        font-size: 100px;
+    }
+
+    #top-bg-article {
+        padding-left: 20px;
+        padding-right: 20px;
+        font-size: 20px;
+    }
+    #dropdown-button {
+        display: inline-block;
+        border: none;
+        background-color: #5865F2;
+        color: white;
+        padding: 12px;
+        font-size: 16px;
+        border-radius: 3px;
+    }
+
+    #dropdown-button:hover {
+        cursor: pointer;
+    }
+
+    #hidden-menu {
+        margin-top: 10px;
+        flex-direction: column;
+    }
+
+    .hidden-menu-item:hover {
+        background-color: #5865F2;
+        color: white;
+        border-radius: 3px;
+    }
+
+    .navbar {
+        display: none;
+    }
+
+    #social-links {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    #social-links img {
+        width: 100px;
+    }
+
+    #main-sections {
+        padding: 10px;
+    }
+    
+}
+
+@media only screen and (max-width: 850px) {
+
+    #discord-section div {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .discord-header-text {
+        order: 1;
+    }
+
+    #discord-section img {
+        width: auto;
+        float: none;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .discord-description-left {
+        padding-left: 0.5%;
+        padding-right: 0.5%;
+    }
+    
+    .discord-description-right {
+        padding-right: 0.5%;
+        padding-left: 0.5%;
+    }
 
     #top-bg-header {
         font-size: 100px;
