added favicon and embed image and fixed image sizing issue

--- a/style.css
+++ b/style.css
@@ -177,6 +177,10 @@ nav a.active {
     float: right;
 }
 
+#rules-image:hover {
+    cursor: pointer;
+}
+
 #discord-feature-3 img {
     float: left;
 }
