--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: Oxygen-Regular;
-    src: url(resources/Oxygen-Regular.ttf);
+    font-family: Ginto-Nord;
+    src: url(resources/GintoNordRegular.woff2.ttf);
 }
 
 
@@ -8,11 +8,11 @@ body {
     margin: 0px;
     display: flex;
     flex-direction: column;
-    background-image: url(resources/bg.jpg);
+    background: #0E1218;
 }
 
 h1, h2, h3, h4, p {
-    font-family: Oxygen-Regular;
+    font-family: Ginto-Nord;
     color: white;
     text-align: center;
 }
@@ -48,7 +48,7 @@ nav a {
     margin-left: 5px;
     margin-right: 5px;
     font-size: 1.25rem;
-    font-family: Oxygen-Regular;
+    font-family: Ginto-Nord;
     font-weight: 600;
     padding: 12px;
     display: inline-block;
@@ -100,96 +100,57 @@ nav a.active {
 
 /* remaining section styles */
 #main-sections {
-    padding-left: 7%;
-    padding-right: 7%;
     margin-top: 0px;
     border-bottom: 3px solid #5865F2;
-    background: linear-gradient(217deg, rgba(66,69,73, 0.9), rgba(255,0,0,0) 80%),
-                linear-gradient(127deg, rgba(54,57,62, 0.9), rgba(0,255,0,0) 80%),
-                linear-gradient(336deg, rgba(40,43,48, 0.9), rgba(0,0,255,0) 80%);
+    background: #161727;
 }
 
 /* discord section styles */
 
-.header-text {
-    text-align: center;
+
+.discord-section h1 {
+    margin-top: 0px;
+    padding-top: 15px;
+    font-size: 32px;
 }
 
-.discord-header-text {
-    font-size: xx-large !important;
-    text-align: center;
+.discord-section p {
+    font-size: 24px;
 }
 
-#discord-section {
+.discord-section.content.dark {
+    background-color: #0E1218;
+}
+
+.discord-section.content {
+    padding-left: 7%;
+    padding-right: 7%;
     display: flex;
-    flex-direction: column;
+    gap: 80px;
 }
 
-#discord-section a {
-    font-family: Oxygen-Regular;
-    color: white;
-
-}
-
-#discord-section > div {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    border-bottom: 3px solid #5865F2;
-}
-
-#discord-section > div:nth-child(5) {
-    border-bottom: none;
-}
-
-#discord-section img {
-    width: 40%;
+.discord-section.content img {
+    width: 100%;
     border: 4px solid #2a2d31;
     border-radius: 10px;
 }
 
-#discord-section div {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-bottom: 0px;
-    margin-top: 0px;
+.image-side {
+    width: 40%;
 }
 
-#discord-section p {
-    font-size: x-large;
-    text-align: center;
+.text-side {
+    width: 60%;
 }
 
-.discord-description-left {
-    padding-left: 2.5%;
-    padding-right: 45%;
-}
-
-.discord-description-right {
-    padding-right: 2.5%;
-    padding-left: 45%;
-}
-
-#discord-feature-1 img {
-    float: left;
-}
-
-#discord-feature-2 img {
-    float: right;
-}
 
 #rules-image:hover {
     cursor: pointer;
 }
 
-#discord-feature-3 img {
-    float: left;
-}
-
-#discord-feature-4 img {
-    float: right;
-}
 
 #join-discord-section {
+    background-color: #0E1218;
     display: flex;
     flex-direction: column;
 }
@@ -224,6 +185,12 @@ nav a.active {
     box-shadow: 0px 0px 20px 0 rgba(1, 146, 243, 0.75);
 }
 
+.svg {
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+
 
 /* links section styles */
 
@@ -253,7 +220,7 @@ nav a.active {
 }
 
 #credits {
-    font-family: Oxygen-Regular;
+    font-family: Ginto-Nord;
 }
 
 .coolguy {
@@ -280,7 +247,7 @@ nav a.active {
 
 @keyframes greyfade {
     from { filter: contrast(0%); }
-    to { filter: contrast(100%);  }
+    to { filter: contrast(100%); }
 }
 
 @keyframes rainbow {
@@ -296,104 +263,49 @@ nav a.active {
 
 /* mobile styles */
 
-@media only screen and (max-width: 1050px) {
 
-    #discord-section img {
-        width: 50%;
-    }
 
-    .discord-description-left {
-        padding-left: 0.5%;
-        padding-right: 52.5%;
-    }
-    
-    .discord-description-right {
-        padding-right: 0.5%;
-        padding-left: 52.5%;
-    }
-
-    #top-bg-header {
-        font-size: 100px;
-    }
-
-    #top-bg-article {
-        padding-left: 20px;
-        padding-right: 20px;
-        font-size: 20px;
-    }
-    #dropdown-button {
-        display: inline-block;
-        border: none;
-        background-color: #5865F2;
-        color: white;
-        padding: 12px;
-        font-size: 16px;
-        border-radius: 3px;
-    }
-
-    #dropdown-button:hover {
-        cursor: pointer;
-    }
-
-    #hidden-menu {
-        margin-top: 10px;
-        flex-direction: column;
-    }
-
-    .hidden-menu-item:hover {
-        background-color: #5865F2;
-        color: white;
-        border-radius: 3px;
-    }
-
-    .navbar {
-        display: none;
-    }
-
-    #social-links {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-    }
-
-    #social-links img {
-        width: 100px;
-    }
+@media only screen and (max-width: 1100px) {
 
     #main-sections {
-        padding: 10px;
+        padding: 0px !important;
     }
-    
-}
 
-@media only screen and (max-width: 850px) {
+    .svg {
+        width: 100%;
+    }
 
-    #discord-section div {
-        display: flex;
+    .discord-section.content {
+        margin: 0px !important;
+        padding: 0px !important;
+        width: 100%;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .discord-section.content.dark {
+        width: 100%;
         flex-direction: column-reverse;
     }
 
-    .discord-header-text {
-        order: 1;
-    }
-
-    #discord-section img {
-        width: auto;
-        float: none;
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
-    .discord-description-left {
-        padding-left: 0.5%;
-        padding-right: 0.5%;
+    .image-side {
+        width: 92%;
+        margin-right: 1%;
     }
     
-    .discord-description-right {
-        padding-right: 0.5%;
-        padding-left: 0.5%;
+    .text-side {
+        width: 90%;
     }
+
+
+    .discord-section.content img {
+        width: 100%;
+        border: 4px solid #2a2d31;
+        border-radius: 10px;
+    }
+
 
     #top-bg-header {
         font-size: 100px;
