--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ h1, h2, h3, h4, p {
 
 nav {
     overflow: visible;
-    background-color:#36393F;
     text-align: center;
     position: relative;
     padding: 30px;
     border-bottom: 3px solid #5865F2;
+    backdrop-filter: blur(12px);
 }
   
 nav a {
@@ -77,7 +77,7 @@ nav a.active {
 /* bg image styles */
 
 #bg-image-container {
-    height: 600px;
+    height: 700px;
     background-image: url(resources/top-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -304,6 +304,7 @@ nav a.active {
         width: 100%;
         border: 4px solid #2a2d31;
         border-radius: 10px;
+        margin-bottom: 40px;
     }
 
 
