--- a/style.css
+++ b/style.css
@@ -274,6 +274,17 @@ nav a.active {
 
 @media only screen and (max-width: 1100px) {
 
+
+    .discord-section.content {
+        padding-left: 7%;
+        padding-right: 7%;
+        display: flex;
+        gap: 80px;
+        padding-bottom: 80px;
+        padding-top: 80px;
+    }
+
+    
     #main-sections {
         padding: 0px !important;
     }
@@ -284,7 +295,8 @@ nav a.active {
 
     .discord-section.content {
         margin: 0px !important;
-        padding: 0px !important;
+        padding-left: 0px !important;
+        padding-right: 0px !important;
         width: 100%;
         flex-direction: column;
         gap: 20px;
